working on html file/ buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,47 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- Form -->
+    <form action="index.hs" method="GET">
+        <fieldset>
+            <!-- First button -->
+            <button>
+                <a 
+                 href="http://www.facebook.com" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                >
+                <i class="fab fa-facebook-f"> 
+                    &#124;&nbsp; Facebook login
+                </i>
+                </a>
+            </button>
+            <!-- Seccond button -->
+            <button>
+                <a 
+                 href="http://www.google.com" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                >
+                <i class="fab fa-google"> 
+                    &#124;&nbsp; Google login
+                </i>
+                </a>
+            </button>
+            <!-- Third button -->
+            <button>
+                <a 
+                 href="http://www.facebook.com" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                >
+                <i class="fab fa-facebook"> 
+                    &#124;&nbsp; Facebook login
+                </i>
+                </a>
+            </button>
+
+        </fieldset>
+    </form>
 </body>
 </html>
