working on html file/ input area

--- a/index.html
+++ b/index.html
@@ -15,42 +15,59 @@
     <!-- Form -->
     <form action="index.hs" method="GET">
         <fieldset>
-            <!-- First button -->
-            <button>
+            <div>
+             <!-- First button -->
+             <button>
                 <a 
                  href="http://www.facebook.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
                 <i class="fab fa-facebook-f"> 
-                    &#124;&nbsp; Facebook login
+                    &nbsp;&#124;&nbsp; Facebook login
                 </i>
                 </a>
-            </button>
-            <!-- Seccond button -->
-            <button>
+             </button>
+             <!-- Seccond button -->
+             <button>
                 <a 
                  href="http://www.google.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
                 <i class="fab fa-google"> 
-                    &#124;&nbsp; Google login
+                    &nbsp;&#124;&nbsp; Google login
                 </i>
                 </a>
-            </button>
-            <!-- Third button -->
-            <button>
+             </button>
+             <!-- Third button -->
+             <button>
                 <a 
-                 href="http://www.facebook.com" 
+                 href="http://www.twitter.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
-                <i class="fab fa-facebook"> 
-                    &#124;&nbsp; Facebook login
+                <i class="fab fa-twitter"> 
+                    &nbsp;&#124;&nbsp; Twitter login
                 </i>
                 </a>
-            </button>
+             </button>
+            </div>
+            <div></div>
+            <div>
+                <legend>OR</legend>
+            </div>
+            <div>
+                <legend>
+                    Sign in with
+                </legend>
+                <input 
+                type="text" 
+                name="userName" 
+                placeholder="" 
+                id="1"
+                >
+            </div>
 
         </fieldset>
     </form>
