working on html file/ last fieldset

--- a/index.html
+++ b/index.html
@@ -61,14 +61,41 @@
                 <legend>
                     Sign in with
                 </legend>
+                <div>
                 <input 
                 type="text" 
                 name="userName" 
-                placeholder="" 
+                type="email"
+                placeholder="Username or email" 
                 id="1"
                 >
+                <input 
+                type="password" 
+                name="password" 
+                placeholder="Password" 
+                id="2"
+                >
+                </div>
+                <div>
+                <input 
+                type="checkbox" 
+                name="checkbox" 
+                id="3"
+                >
+                <label for="checkbox">
+                    Remember me
+                </label>
+                </div>
+                <input 
+                type="submit" 
+                value="LOGIN"
+                >
             </div>
-
+        </fieldset>
+        <fieldset>
+            <button>
+                Register now
+            </button>
         </fieldset>
     </form>
 </body>
