--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 <body>
     <!-- Form -->
     <form action="index.hs" method="GET">
+        <!-- First fieldset -->
         <fieldset>
             <div>
              <!-- First button -->
              <button>
+                 <!-- Facebook link -->
                 <a 
                  href="http://www.facebook.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
+                <!-- Facebook logo -->
                 <i class="fab fa-facebook-f"> 
                     &nbsp;&#124;&nbsp; Facebook login
                 </i>
@@ -30,11 +33,13 @@
              </button>
              <!-- Seccond button -->
              <button>
+                 <!-- Google link -->
                 <a 
                  href="http://www.google.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
+                <!-- Google logo -->
                 <i class="fab fa-google"> 
                     &nbsp;&#124;&nbsp; Google login
                 </i>
@@ -42,26 +47,35 @@
              </button>
              <!-- Third button -->
              <button>
+                 <!-- Twitter link -->
                 <a 
                  href="http://www.twitter.com" 
                  target="_blank" 
                  rel="noopener noreferrer"
                 >
+                <!-- Twitter logo -->
                 <i class="fab fa-twitter"> 
                     &nbsp;&#124;&nbsp; Twitter login
                 </i>
                 </a>
              </button>
             </div>
+            <!-- Middle vertical line -->
             <div></div>
+            <!-- Middle circle with text -->
             <div>
+                <!-- Legend -->
                 <legend>OR</legend>
             </div>
             <div>
+                <!-- Legend -->
                 <legend>
                     Sign in with
                 </legend>
                 <div>
+                    <!-- User logo -->
+                    <i class="far fa-user"></i>
+                    <!-- User input area -->
                 <input 
                 type="text" 
                 name="userName" 
@@ -69,6 +83,9 @@
                 placeholder="Username or email" 
                 id="1"
                 >
+                <!-- Password logo -->
+                <i class="fas fa-user-lock"></i>
+                <!-- Password input area -->
                 <input 
                 type="password" 
                 name="password" 
@@ -77,24 +94,34 @@
                 >
                 </div>
                 <div>
+                    <!-- Checkbox -->
                 <input 
                 type="checkbox" 
                 name="checkbox" 
                 id="3"
                 >
+                <!-- Checkbox label -->
                 <label for="checkbox">
                     Remember me
                 </label>
                 </div>
+                <!-- Submit input area -->
                 <input 
                 type="submit" 
                 value="LOGIN"
                 >
             </div>
         </fieldset>
+        <!-- Seccond fieldset -->
         <fieldset>
+            <!-- Register now button -->
             <button>
                 Register now
+            </button>
+            &#124;
+            <!-- Forgotten button -->
+            <button>
+                Forgotten?
             </button>
         </fieldset>
     </form>
