working on css file/ middle line and circle

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
              </button>
             </div>
             <!-- Middle vertical line -->
-            <div></div>
+            <div class="middle-line"></div>
             <!-- Middle circle with text -->
-            <div>
+            <div class="circle">
                 <!-- Legend -->
                 <legend>OR</legend>
             </div>
