working on css file/ right side form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div>
                 <!-- Legend -->
-                <legend>
+                <legend id="sign-in">
                     Sign in with
                 </legend>
                 <div>
@@ -93,7 +93,7 @@
                 id="2"
                 >
                 </div>
-                <div>
+                <div class="checkbox">
                     <!-- Checkbox -->
                 <input 
                 type="checkbox" 
@@ -107,13 +107,14 @@
                 </div>
                 <!-- Submit input area -->
                 <input 
+                id="submit-button"
                 type="submit" 
                 value="LOGIN"
                 >
             </div>
         </fieldset>
         <!-- Seccond fieldset -->
-        <fieldset>
+        <fieldset class="click-buttons">
             <!-- Register now button -->
             <button>
                 Register now
