working on css file/ last buttons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 name="userName" 
                 type="email"
                 placeholder="Username or email" 
-                id="1"
+                id="1" 
+                class="user"
                 >
                 <!-- Password logo -->
                 <i class="fas fa-user-lock"></i>
@@ -90,7 +91,8 @@
                 type="password" 
                 name="password" 
                 placeholder="Password" 
-                id="2"
+                id="2" 
+                class="user"
                 >
                 </div>
                 <div class="checkbox">
