working on css file/ login app finish (for the moment)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Form -->
-    <form action="index.hs" method="GET">
+    <form action="index.js" method="GET">
         <!-- First fieldset -->
         <fieldset>
             <div>
