Edit form top area

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form action="index.js" method="GET">
       <!-- First fieldset -->
       <fieldset class="top-area">
-        <div>
+        <div class="left-section">
           <!-- First button -->
           <button>
             <!-- Facebook link -->
@@ -56,14 +56,17 @@
             </a>
           </button>
         </div>
-        <!-- Middle vertical line -->
-        <div class="middle-line"></div>
-        <!-- Middle circle with text -->
-        <div class="circle">
-          <!-- Legend -->
-          <legend>OR</legend>
+        <!-- Top area center section -->
+        <div class="center-section">
+          <!-- Middle vertical line -->
+          <div class="middle-line"></div>
+          <!-- Middle circle with text -->
+          <div class="circle">
+            <!-- Legend -->
+            <legend>OR</legend>
+          </div>
         </div>
-        <div>
+        <div class="right-section">
           <!-- Legend -->
           <legend id="sign-in">Sign in with</legend>
           <div>
